# ParallelAlgorithms

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
source/: CMakeLists.txt  GlobalAND.h  main.cpp
source/LinearAlgebra/: MatrixMultiplication.cpp  MatrixMultiplication.h
source/PRAM-CRCW/: GlobalAND.h  GlobalOR.h  Maximum.h
